GNOME Bugzilla – Bug 687619
Once you visit "Recent files", you cannot send files to Trash
Last modified: 2012-11-06 00:46:01 UTC
Created attachment 228083 [details] Screenshot, not showing the "Move to Trash" menu item Steps to reproduce: 1. Open Files, "Home" location is shown. 2. Select "Recent files" location 3. Right-click on any item in "Recent files". A popup menu is shown which btw shows "Delete" instead of "Move to Trash", but that is not the big issue here, we just show the dialog. If we don't show this dialog the problem doesn't happen. 4. Now go back to "Home" location. 5. Finally, right-click on any item in "Home". The popup menu no longer shows "Move to Trash".
BTW, this is with Files 3.7.1 in F18, always reproducible here.
Thanks for the report, I pushed a fix to git master now.