view: ensure Trash action is visible when setting sensitivity

We will set the visibility of the action to FALSE when we go to a
location that supports deletion but not trashing, but we fail to restore
it to TRUE when we go back to a directory that supports trashing.

https://bugzilla.gnome.org/show_bug.cgi?id=687619